# SGNFitnessGym

Attendance/: CMakeLists.txt  attendance.cpp  attendance.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  user.cpp  user.h
FeesManagement/: CMakeLists.txt  fees.cpp  fees.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
GymServer/: CMakeLists.txt
GymServer/include/: DBInterface.h  MyDateTime.h  RESTful.h
GymServer/src/: DBInterface.cpp  Logger.cpp  RESTful.cpp  SGNMain.cpp
MemberManagement/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Reports/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  queryresponseparser.cpp  queryresponseparser.h  user.cpp  user.h
